<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/RelativeLayout_Header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_background">
        
        <!--TODO: Cabecera, añadir el texto y una imagen? -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_header_margin"
            android:text="@string/new_header"
            android:textColor="@color/header_text"
            android:textSize="@dimen/text_header" >
</TextView>
    </LinearLayout>
    <ScrollView
        android:id="@+id/NewScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"> 
        <LinearLayout 
            android:id="@+id/NewLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextView_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_name"
                android:textSize="@dimen/new_text"
                android:textStyle="bold" />
            <EditText 
                android:id="@+id/EditText_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_name"
                android:textSize="@dimen/new_text"
                android:textStyle="bold" 
                android:maxLines="1"
                android:inputType="textPersonName"
                />
            
            <TextView
                android:id="@+id/TextView_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_date"
                android:textSize="@dimen/new_text"
                android:textStyle="bold" />
            <EditText 
                android:id="@+id/EditText_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_date"
                android:textSize="@dimen/new_text"
                android:textStyle="bold" 
                android:maxLines="4"
                android:inputType="date"
                />
            
            <TextView
                android:id="@+id/TextView_Repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_repeat"
                android:textSize="@dimen/new_text"
                android:textStyle="bold" />
            <EditText 
                android:id="@+id/EditText_Repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_repeat"
                android:textSize="@dimen/new_text"
                android:textStyle="bold" 
                android:maxLines="4"
                android:inputType="none"
                />
            <TextView
                android:id="@+id/TextView_Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_description"
                android:textSize="@dimen/new_text"
                android:textStyle="bold" />
            <EditText 
                android:id="@+id/EditText_Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_description"
                android:textSize="@dimen/new_text"
                android:textStyle="bold" 
                android:maxLines="4"
                android:inputType="text|textLongMessage"
                />
            

        </LinearLayout>
        
        
        
        </ScrollView>
    
        
</LinearLayout>    